# bot_atualiza_cadastro

./: pyproject.toml
src/bot_atualiza_cadastro/: main.py  posicao.py
tests/: teste_imagens.py
